@@ -50,3 +50,7 @@ spawn = 150
 killall = 150
 emotion = 0
 emotion_ex = 0
+shownpc = 0
+hidenpc = 0
+blackout = 0
+whiteout = 0
